Backport new changes to 1.20